# poseidon2-zktrie

./: Cargo.toml
plain_implementation/: Cargo.toml  README.md  toolchain
plain_implementation/benches/: mt_bn256.rs  plain_bn256.rs
plain_implementation/src/: lib.rs
plain_implementation/src/fields/: mod.rs  utils.rs
plain_implementation/src/merkle_tree/: mod.rs
plain_implementation/src/neptune/: neptune.rs  neptune_instances.rs
plain_implementation/src/poseidon/: mod.rs  poseidon.rs
plain_implementation/src/poseidon2/: poseidon2.rs
src/: grain.rs  lib.rs  permutation.rs  poseidon2.rs  poseidon2_instance.rs  spec.rs
